<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="mul">x</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="div">÷</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="equla">=</string>
    <string name="sub">-</string>
</resources>